fixed the spacing for the nav menu on mobile

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -74,7 +74,7 @@
     }
 }
 
-@media all and (max-width: 815px) {
+@media all and (max-width: 835px) {
     body, html{
         position:relative;
         overflow-x: hidden !important;
@@ -100,6 +100,7 @@
             -webkit-clip-path: circle(10px at 90% -10%);
             transition: all .6s ease-in-out;
             align-items: center;
+            justify-content: space-evenly;
             
         }
         &-item{
